namespace TodoItems.Core
{
    public enum OptionEnum
    {
        Manual=0,
        Latest=1,
        Freest=2,
    }
}
